# aiovaksms

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  packages.yml
aiovaksms/: __init__.py  client.py
aiovaksms/exceptions/: __init__.py  bad_request.py
aiovaksms/models/: __init__.py  baseurls.py  count_number.py  country.py  number.py  services.py  sms.py
src/vaksms/: client.py
src/vaksms/exceptions/: __init__.py  bad_request.py
src/vaksms/models/: __init__.py
