[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiovaksms"
version = "2.1.2"
description = "Async VakSms api wrapper for python"
readme = "README.md"
authors = [{ name = "lolkof", email = "lolkofprog@gmail.com" }, { name = "kewldan", email = "kewldanil1@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["payments", "api", "vaksms", "rent", "number"]
requires-python = ">=3.10"
dependencies = [
    "aiohttp", "pydantic", "cachetools"
]

[project.urls]
Homepage = "https://github.com/AioSmsProviders/aiovaksms"